# pSCTsimpipe

./: README.rst  pyproject.toml
src/psctsimpipe/: CORSIKACardGen.py  CORSIKACommand.py  CalculateTriggerRate.py  CheckSimTelArrayLogs.py  CtapipeMergeCommand.py  CtapipeProcessCommand.py  HESSioAddHistograms.py  Helpers.py  SLURMScriptGen.py  SingleSimTelArrayRun.py  pSCTSimTelArrayRun.py  pSCTTriggerRate.py
src/psctsimpipe/data/: DAMPE_proton_flux.txt
src/psctsimpipe/tools/: AddHistograms.py  CheckCORSIKALogStatus.py  CheckLogStatus.py  CheckSimTelarrayLogStatus.py  CompressCORSIKABinaries.py  ReSubmitFailedSLURMRuns.py  ShowTools.py  SubmitFullDirCtapipeMergeSLURM.py  SubmitFullDirCtapipeProcessSLURM.py  SubmitFullDirpSCTSLURMRun.py  SubmitFullDirpSCTTriggerRateSLURMRun.py  SubmitMultiCORSIKASLURMRuns.py  SubmitMultiCtapipeMergeSLURM.py  SubmitMultiCtapipeProcessSLURM.py  SubmitMultipSCTSLURMRun.py  SubmitSingleCORSIKASLURMRun.py  SubmitSingleCtapipeProcessSLURMRun.py  SubmitSingleSLURMRun.py  SubmitSinglepSCTSLURMRun.py  SubmitpSCTTriggerRateSLURMRun.py
